# conference-registration

./: README.md  about.html  accommodation.html  admin.html  committees.html  conference-venue.html  contact-us.html  contact.html  dashboard-author.html  dashboard-organizer.html  dashboard-participant.html  dashboard-speaker.html  dashboard.html  index.html  login.html  oml-charter.html  package-lock.json  participant-list.html  photos.html  poster-session.html  previous-conferences.html  public-lecture.html  registration.html  related-conferences.html  report.html  rump-session.html  schedule.html  scientific-programme.html  speakers.html  styles.css  submissions.html  travel-and-visa.html  tutorial-programme.html  venue.html
assets/: founder.avif
backend/: .gitignore  Cargo.toml  README.md  index.html
backend/src/: main.rs
css/: layout.css  main.css  mobile.css
docs/: database-design.md  system-architecture.md  useful-resources.md
docs/end-sem/: diagrams.md
firebase/: auth-service.js  firebase-config.js  firestore.js
guidelines/: readme.md  report_format.doc
js/: admin.js  dashboard-author.js  dashboard-organizer.js  dashboard-participant.js  dashboard-speaker.js  dashboard.js  home-data.js  login.js  main.js  navigation.js  organizer.js  registration.js
sections/: footer.js  hero.js
