[package]
name = "form-submission-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surrealdb = { version = "1.5", features = ["kv-mem"] }
tokio = { version = "1.37", features = ["full"] }
